@@ -4,25 +4,27 @@ Hash: SHA256
 DIST grsecurity-sources-extras-4.9.44.tar.xz 2643884 SHA256 2c8ea5db8c7b0686189fd358fda2237ba1f3a239b31ac8c8f38a9fe81f5533bb SHA512 ef34a5ae6bd99763fe812a4342107ff5032af2b41b560d43279562e8511c2b36da06e30ccc599e23160a95a3833f93d30133e6d9a98cccbb5e6fa028a5e7bd09 WHIRLPOOL 7b14947feb0f0446baa9489a8dd215815414f88614d18848e51a2fc62234df7290fb2513fe87b7907d07aa6d2cea8a3d5f2253b1b0a7b75a9f2dd09d02b7847c
 DIST grsecurity-sources-extras-4.9.48.tar.xz 2542704 SHA256 549446a91147d676debb576a8963ab54fe27d5358b7300e89c0dda5fcd3933f1 SHA512 91b92d457236b82166d0073db8d9807d76607f997067380e2453319de91666aee72570130c682a8ab0f32a320c1f070816583d1f3e296be9147c00794bceedcc WHIRLPOOL 88299efbe138e59d6fd0c20dd4b9288759247e0801de7a675eb4194a11853617146b395133c9a0e49b116af63f56abcf8871cdf73d01d127353d206fff551b8a
 DIST grsecurity-sources-extras-4.9.49.tar.xz 2549128 SHA256 638243a89873b9152780f5d91c6912c6f69e9c4725dd9ac65d6c4c69b63f2877 SHA512 c89bd0a2ae3fbdf066beff9b11ee69486c1f8bcf062b615478d019797ad1aa0199bec1455b689d4852b13d0ec36a19363fa0f1d307a9f2309ddb6b420951f805 WHIRLPOOL 2e5e1e615cdea48fca80f50717a537e457b859781229a4494971110fdf500e1860ca3f82f802e8623f4c8e6f2ff715a682d4bacb95f24dd587c5d8d2a057d26b
+DIST grsecurity-sources-extras-4.9.50.tar.xz 2551140 SHA256 82bff379f87caec7700f96ccdf15eee6a0669d21c4bf25b1373b7a54ef1613e3 SHA512 a729ebbdf382ed947e04152ff265f0d3654561dade4eadf2cc873641fa9005f8c33f2c2196fc0bbe6b3dad3d587122c78081756afcdb4f0d13046718085ef509 WHIRLPOOL 732eadca3e62dba5172f8ffce7a5cb71c1032964ee36e60865dfa030ff399b02626e90e9db636ac9a7844128c187a92682b50e3fb19cb8e9fb204da79fe675f4
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.49.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 751 SHA256 28146e9923f9bf1aa51f88c6f04fae02cf004539184eeacd0d8b81f390e0f59e SHA512 a83e2ed6a0c12e6b7a25392ec3604e625205c27a625c895393768b64de3a893f0b5e6d65662dbc1b2604dbfcdbf01ebc626b6fb76f3ed6973826b0b8c0bf3c88 WHIRLPOOL e9a46e039e153ea7c6237404d61d4b29d985ab4dfc6b71a20e4fc8cca0d11e0827608f1d6f5b0d9774012c71c327f18222d916576a1e7060d4a745b1c72fcf40
+EBUILD grsecurity-sources-4.9.50.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 946 SHA256 d8f32c06fbdcbe8cdeffcc8100eb913cb302aed1602947e2fc53fab1ab002fbd SHA512 14ced2e474f28d5053db67d19a9a7a55a14e8cacb7dba3e72c714d9c6bc4d0e8dd5e854c1e56bcd1fceeefe91cd51920236500466650e9e76a0d9f8af2686421 WHIRLPOOL 39c9bf829a803424242414d0aa4379bb37dd799e82538a878ad977282295e39876a3ad7dfdc8b4f3bc57b8e10b8e229aef0ca3969c91045384b74b5619b51e0e
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlm327oACgkQunvTUHGU
-RZ9DeBAAvWSihqX82lNAnOa9uWlKzGLVe7uLc0t7vPAFMQ+VF/Kr75/1llB3PGFP
-7jI3YtxVzEZb6SFaUnbs1xBc/fpeq84z8vxQyHekSHG7B6vnWW1dfj5HEuYWjuR3
-EYBmaDN855KYrtxHfPDZuWlg9vMFuwLzPS2YY71F9xRmKpYgjA428puGnnh11fqe
-8jyeATFW3VtUuh37rkAxgEGmNOoEHJUrvtFnCKQ35TRWF9vAneVt0mZ9MEg/QwOs
-THW3Ddj57wWKimSIdpjtm4TiE/2/+cUrcw/UydO3dHnj9cslZIVkNDdB45nR9z7r
-+Xo0O+5068hzbxvOANgfLCCd3i7ahQxN6bndVqEiZh0s7PNDf4sTTdQAeSVkSsTq
-iSbvIrUag5w429kA1bt7amh5H5z8JzdZQGokaRhZgt/dupAzAksH/oQkENujVzBn
-/COFxGa4J27CyURNfJPThmPpWuZBKv7exsj628g9tpgujNYfXLj3r82hiW3jKC9h
-ZPPvyOHXFZSD2/nzosa7S7XxKIxazi5PAuR4JlkJD0iUJNJR4l2g+FkaYTI0fGPi
-bZsrc0IuLKr8+ElY1cRPzXxPSlq93T2E06K4URDCbGp4f+GVljHuoCj9A0hmWYTV
-9Uen5ctx6PvomsJmshCIR5+bE3nGRRS0Jkp21k3uU8jM2hzzFCk=
-=c5Fm
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlm7zwYACgkQunvTUHGU
+RZ+xAg//eq+6RGFBr1qd3QBeQEy54dyuw39sxzrEf0DjtZ8kDPXFvJzlF5Vu1tAz
+08K175f1kNLnbnz9s9GjRyFolQKzhEJZh5NBj/ESAvQ+ahMmybT2zNvUFZnL8DwI
+r6R9aMUAiheoFdwGtDMnN0rMnu02WkOJ0P/uVM4/fLPy4aBPvoeuNsL4Zpfg98J6
+3tkzGm8CfKP3nq6Vkpg/wysECWEPARzQXyWvr+Z1YLgHRM6h69G4+cEPWMXEsff5
+y5ByD3CMcZ2i8WjTrWNbqHINSW3MTPoP2e28ziT/KuLmdUa6aIqlIn0fKzW7vQKL
+oTRfv8tbMVsBDGPkC+Zscl2ls1vpJUXXVmy5SUntYfNjeZBgTNHaM5bGx/IBiXr+
+g940iZJmycMloN4sk4mFZ53PWTYdVghuZKx7u2qHtPLPBNwmHtHw5ce6Z7LHhOhs
+M4JqW7Z9G3e+7f/OL/I2L4EmvCICheKsKrm4ff8x1gUTVWiacG56JzWFFfm1WNDn
+a8koMR+zddFwggJjept8FFJ9/a9XeQHIONmrO0ME4GBq2FoPTmQBWmwygkVlVmOw
+TpRq3v49CggRjWPq8RPwytace/iKAVcm5UH+0IgGxmwhbWBBKqGASbxZCfkyYdoH
+f9vq7hnpn/crodrp771eDP1zga6HOnwSqZpvSP0skx4Ge/UXIKU=
+=nXJb
 -----END PGP SIGNATURE-----
